# PDFer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  alert_rules.yml  alertmanager.yml  docker-compose.override.yml  docker-compose.yml  prometheus.yml  promtail-config.yml  pyproject.toml  requirements.txt
app/: cache.py  celery_app.py  config.py  database.py  landing.py  main.py  models.py  schemas.py  security.py
app/chat/: agent.py  router.py  tools_impl.py  tools_schema.py
app/observability/: METRICS.md  logging_config.py  metrics.py
app/routers/: auth.py  requests.py  templates.py
app/services/: extraction.py
app/tasks/: documents.py  notifications.py
migrations/: env.py
migrations/versions/: 49aec835a13c_init_tables.py  5a7aa06abbf7_translate_seed_template_content_to_.py  b160868a1836_add_cancelled_request_status.py  c63bbc8ec4c6_init_tempates.py
tests/: conftest.py  test_auth.py  test_extraction.py  test_requests.py
