[project]
name = "pdfer"
version = "0.1.0"
description = "FastAPI backend that turns structured or free-text input into generated documents, using Claude for schema-constrained extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.1",
    "anthropic>=0.70.0",
    "asyncpg>=0.31.0",
    "bcrypt==4.1.2",
    "celery==5.3.6",
    "fastapi[standard]>=0.111.0",
    "flower>=2.0.1",
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
    "passlib==1.7.4",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "psycopg2-binary==2.9.9",
    "pydantic-settings>=2.14.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "python-jose==3.3.0",
    "redis==5.0.1",
    "sqlalchemy==2.0.25",
    "uvicorn==0.27.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
